--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "country-codes-list": "^2.0.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.285.0",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
