--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://api.aitals.com
 
 # Backend Server
 NODE_ENV=development
-PORT=5000
+PORT=5002
 
 # MongoDB
 MONGO_URI=mongodb://localhost:27017/aitals-admin
@@ -14,3 +14,21 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production-aitals-2025
 # Frontend
 VITE_APP_NAME=Aitals Admin
 VITE_APP_VERSION=1.0.0
+
+
+# # API Configuration
+# VITE_API_BASE_URL=http://localhost:5000
+
+# # Backend Server
+# NODE_ENV=development
+# PORT=5000
+
+# # MongoDB
+# MONGO_URI=mongodb://localhost:27017/aitals-admin
+
+# # JWT Secret
+# JWT_SECRET=your-super-secret-jwt-key-change-in-production-aitals-2025
+
+# # Frontend
+# VITE_APP_NAME=Aitals Admin
+# VITE_APP_VERSION=1.0.0
