--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "country-codes-list": "^2.0.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.285.0",
+    "marked": "^16.4.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "react": "^18.2.0",
