--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 # API Configuration
-VITE_API_BASE_URL=https://api.aitals.com
+VITE_API_BASE_URL=http://localhost:5000
 
 # Backend Server
 NODE_ENV=development
-PORT=5002
+PORT=5000
 
 # MongoDB
 MONGO_URI=mongodb://localhost:27017/aitals-admin
