--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=https://api.aitals.com
+VITE_API_BASE_URL=http://localhost:5000
 
 # Backend Server
 NODE_ENV=development
