--- a/.env.local
+++ b/.env.local
@@ -17,7 +17,7 @@ VITE_APP_VERSION=1.0.0
 
 
 # # API Configuration
-# VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=http://localhost:5000
 
 # # Backend Server
 # NODE_ENV=development
