--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "country-codes-list": "^2.0.0",
@@ -28,8 +29,10 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
