--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "seed": "node scripts/seedData.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
