--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.16.0",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
